infra/argocd/templates/argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.infra.durp.info`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
  tls:
    secretName: argocd-tls
